# phantomrecon

./: .env.example  .gitignore  LICENSE  README.md  demo_guide.py  demo_server.py  install.bat  install.sh  pyproject.toml  report.md  requirements.txt
phantomrecon/: __init__.py  __main__.py  cli.py  config.py
phantomrecon/ai/: __init__.py  analyzer.py  prompts.py
phantomrecon/core/: reporter.py  scanner.py
phantomrecon/data/: subdomains.txt
phantomrecon/modules/: __init__.py  dns_enum.py  email_harvest.py  headers.py  port_scan.py  ssl_check.py  subdomain.py  tech_detect.py  virustotal.py  whois_lookup.py
