[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phantomrecon"
version = "1.0.0"
description = "👻 AI-Powered Reconnaissance Tool for Ethical Hackers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "PhantomRecon Team"}
]
keywords = ["security", "reconnaissance", "ethical-hacking", "ai", "osint", "pentest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: Name Service (DNS)",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "dnspython>=2.4",
    "python-whois>=0.8",
    "requests>=2.31",
    "groq>=0.4",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "shodan>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
phantomrecon = "phantomrecon.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/phantomrecon"
Repository = "https://github.com/yourusername/phantomrecon"
Issues = "https://github.com/yourusername/phantomrecon/issues"

[tool.setuptools.packages.find]
include = ["phantomrecon*"]
